fix layout issue of Login page

--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,15 @@
   background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   padding: 20px;
-  margin-top: 100px;
-  width: 400px;
+  margin-top: 50px;
+  border: 1px solid black;
 }
 
 .form-field-container {
-  padding: 10px;
+  padding: 16px;
+  width: 60vh;
 }
 
 .form-field {
-  padding: 6px;
+  padding: 8px;
 }
